closeDialogDelete and styling
Added function to close the delete dialog when cancel is clicked, also added necessary event listeners. Also did some styling on buttons in the delete dialog.

--- a/style.css
+++ b/style.css
@@ -268,4 +268,16 @@ footer {
   display: grid;
   grid-template-columns: 1fr 1fr;
   margin-top: 10px;
+  text-align: center;
+}
+
+#buttonsDialogDelete button {
+  border-radius: 8px;
+}
+
+#deleteButtonInDialogDelete button {
+  background-color: red;
+}
+#cancelButtonInDialogDelete button {
+  background-color: lightgreen;
 }
