added sorting menu html and function for sorting by age

--- a/style.css
+++ b/style.css
@@ -281,3 +281,9 @@ footer {
 #cancelButtonInDialogDelete button {
   background-color: lightgreen;
 }
+
+/* ========== DROPDOWN SORTING ========== */
+
+#dropdownSort {
+  margin-left: 100px;
+}
